# nba_bot

./: .gitignore  README.md  feature_cols_lgm.pkl  feature_cols_xgb_spread_t2.pkl  feature_cols_xgb_total_t2.pkl  gamma_live_out.txt  gamma_output.txt  model_lgb_cal_isotonic_t2.pkl  paper_bankroll.json  paper_trades.json  pyproject.toml  test_features_speed.py  test_gamma.py  test_gamma_live.py  test_gamma_pagination.py  test_gamma_recent.py  test_gamma_titles.py  titles.txt  xgb_first_half_t2.pkl  xgb_model_t2.pkl  xgb_spread_t2.pkl  xgb_total_t2.pkl
_bmad-output/implementation-artifacts/: tech-spec-backtest-polymarket-model-colab.md  tech-spec-harden-paper-trading-engine-archived-2026-03-08.md  tech-spec-harden-paper-trading-engine.md  tech-spec-nba-bot-python-package-colab-training.md  tech-spec-nba-polymarket-paper-trading.md
_bmad/_config/: files-manifest.csv  manifest.yaml
_bmad/_config/ides/: antigravity.yaml  gemini.yaml  windsurf.yaml
_bmad/_memory/: config.yaml
_bmad/bmm/: config.yaml
_bmad/core/: config.yaml
docs/: nba_win_probability.py  polymarket_live_scanner.py  polymarket_ws_scanner.py
nba_bot/: __init__.py  config.py  features.py  market_analytics.py  model.py  nba_live.py  paper.py  polymarket.py  scan.py  settle.py  team_stats_cache.py  train.py  ws_stream.py
notebooks/: nba_backtest_colab.ipynb  nba_backtest_colab_parquet.ipynb  nba_backtest_modal_parquet.ipynb  nba_market_models_colab.ipynb  nba_win_prob_colab.ipynb
