[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nba-bot"
version = "0.1.0"
description = "NBA win probability model + Polymarket edge scanner"
requires-python = ">=3.11"
dependencies = [
    "xgboost>=2.0",
    "lightgbm>=4.0",
    "scikit-learn>=1.3",
    "pandas>=1.5",
    "numpy>=2.0",
    "joblib>=1.1",
    "tqdm>=4.0",
    "nba_api>=1.4",
    "requests>=2.31",
    "websocket-client>=1.6",
    "polars>=1.0",
    "pyarrow>=16.0",
]

[project.optional-dependencies]
# nba-on-court currently caps numpy<2.0 so it cannot be a core dependency on
# Python 3.14+ (numpy 2.x is the only pre-built option). Install with:
#   pip install -e ".[train]"
train = [
    "nba-on-court>=0.2.0,<1.0",
]

[project.scripts]
nba-bot-scan   = "nba_bot.scan:main"
nba-bot-train  = "nba_bot.train:main"
nba-bot-settle = "nba_bot.settle:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["nba_bot*"]
